# crystallize

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  codecov.yaml  demo.tape  generate_docs.py  pixi.toml  prompt.md  pyproject.toml  release-please-config.json  requirements.txt
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: bump_version.yml  ci.yml  deploy.yml  generate_docs.yml  lint.yml  publish_pypi.yml  release-please.yml  test.yml
apidocs/: mkdocs.yml
apidocs/source/: experiment.md
cli/: app.py  constants.py  discovery.py  main.py  status_plugin.py  utils.py  yaml_edit.py
cli/screens/: command_palette.py  config_editor.py  create_experiment.py  delete_data.py  help.py  load_errors.py  prepare_run.py  run.py  selection.py  selection_screens.py  strategy.py
cli/style/: app.tcss
cli/widgets/: __init__.py  config_editor.py  output_tree.py  selection.py  writer.py
crystallize/: __init__.py  cli.py  recur.py
crystallize/agentic/: __init__.py  schema.py  steps.py  verifiers.py
crystallize/cli/: app.py  main.py  yaml_loader.py
crystallize/core/: __init__.py  builder.py  cache.py  config.py  constants.py  context.py  datasource.py  execution.py  experiment.py  experiment_graph.py  hypothesis.py  injection.py  pipeline.py  pipeline_step.py  plugins.py  resources.py  result.py  treatment.py
crystallize/datasources/: __init__.py  artifacts.py  datasource.py  simple_data_source.py
crystallize/experiments/: experiment.py  experiment_graph.py  treatment.py
crystallize/loops/: __init__.py  experiment_loop.py
crystallize/pipelines/: pipeline.py  pipeline_step.py
crystallize/plugins/: __init__.py  artifacts.py  execution.py  plugins.py  provenance.py
crystallize/steps/: identity_step.py
crystallize/tests/: test_cli.py
crystallize/utils/: cache.py  context.py  decorators.py  injection.py
crystallize/yaml_cli/: main.py
docs/: PHILOSOPHY.md  README.md  TEST_COVERAGE_ANALYSIS.md  astro.config.mjs  getting_started.md  package-lock.json  package.json
docs/adr/: 0001-artifact-retention.md  0002-treatment-panel.md  0003-artifact-summary-table.md  0004-cooperative-cancel.md  0005-agentic-harness.md  (+10 more)
examples/: minimal_experiment.py
extras/crystallize-extras/: CHANGELOG.md  pyproject.toml
extras/crystallize-extras/crystallize_extras/: __init__.py
extras/crystallize-extras/crystallize_extras/ollama_step/: initialize.py
extras/crystallize-extras/crystallize_extras/openai_step/: initialize.py
extras/crystallize-extras/crystallize_extras/vllm_step/: initialize.py
extras/crystallize-extras/tests/: test_experiment_loop_openai.py  test_ollama_step.py  test_openai_step.py  test_ray_execution.py  test_vllm_step.py
networkx/: __init__.py
scripts/: record-demo.sh
tests/: conftest.py  test_aggregation.py  test_app.py  test_artifact_features.py  test_artifacts.py  test_cache.py  test_cache_extended.py  test_cli_core.py  test_cli_create.py  test_cli_errors.py  test_cli_new.py  test_cli_status_plugin.py  test_cli_yaml_discovery.py  test_config_screen.py  test_config_widget.py  test_context.py  test_context_extended.py  test_create_screen_tree.py  test_decorators.py  test_delete_data.py  test_dx_improvements.py  test_eta.py  test_execution.py  test_experiment.py  test_experiment_graph.py  test_experiment_loop.py  test_from_yaml.py  test_hypothesis.py  test_hypothesis_extended.py  test_injection.py  test_load_error.py  test_metrics_loading.py  test_pipeline.py  test_pipeline_step.py  test_plugins.py  test_plugins_extended.py  test_prepare_run_screen.py  test_result.py  test_result_extended.py  test_run_screen.py  (+9 more)
(+125 files in other folders)
