[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crystallize-ml"
version = "0.26.1"
authors = [{ name = "Bryson Tang", email = "brysontang@gmail.com" }]
description = "A framework for reproducible experiments with pipelines, treatments, and hypotheses."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml >=6.0.2,<7",
    "networkx >=3.4.2,<4", 
    "tqdm",
    "rich >=13.8.1,<14",
    "dill >=0.3.7,<0.4",
    "textual >=5.0.1,<6",
    "textual-serve >=1.1.2,<2",
    "python-dotenv >=1.0.1,<2",
]

[project.optional-dependencies]
dev = []  # Empty; dev deps handled in pixi sections
extras = ["crystallize-extras"]
ray = ["ray"]
vllm = ["vllm"]
cli = ["textual"]
all = ["crystallize-extras", "ray", "vllm", "textual"]

[project.urls]
Homepage = "https://github.com/brysontang/crystallize"
Documentation = "https://github.com/brysontang/crystallize/tree/main/docs"

[project.scripts]
crystallize = "cli.app:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["crystallize*", "cli*"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
extend-ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "tests/",
    "examples/",
    "extras/",
]

# Gradual typing: start lenient, tighten over time
[[tool.mypy.overrides]]
module = [
    "crystallize.*",
    "cli.*",
]
ignore_errors = false
warn_return_any = false
check_untyped_defs = false

[tool.pixi.project]
name = "crystallize-ml"
authors = ["Bryson Tang <brysontang@gmail.com>"]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "win-64"]

[tool.pixi.feature.dev.tasks]
test = "pytest -q"
cov = "pytest --cov=crystallize --cov-report=xml"
diff-cov = "diff-cover coverage.xml --compare-branch=main"
lint = "ruff check crystallize tests"
format = "ruff format crystallize tests"
typecheck = "mypy crystallize cli"

[tool.pixi.environments]
default = { features = [] }
dev = { features = ["dev"] }
extras = { features = ["extras"] }
ray = { features = ["ray"] }
vllm = { features = ["vllm"] }

[tool.pixi.dependencies]
python = "3.10.*"

[tool.pixi.feature.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pandas = ">=2.2.3,<3"
numpy = ">=2.1.1,<3"
scipy = ">=1.15.2,<2"
ruff = "*"
hypothesis = ">=6.136.2,<7"
pytest-asyncio = ">=1.0.0,<2"
mypy = ">=1.0"
types-pyyaml = "*"
pre-commit = "*"

[tool.pixi.feature.dev.pypi-dependencies]
crystallize-ml = "*"
lazydocs = ">=0.4.8,<0.5"
build = ">=1.2.2.post1,<2"
twine = ">=5.1.0,<6"
diff-cover = "*"

[tool.pixi.feature.extras.pypi-dependencies]
crystallize-ml = "*"

[tool.pixi.feature.ray.pypi-dependencies]
crystallize-ml = "*"

[tool.pixi.feature.vllm.pypi-dependencies]
crystallize-ml = "*"

[tool.uv.sources]
crystallize-ml = { path = ".", editable = true }
crystallize-extras = { path = "extras/crystallize-extras", editable = true }
